# imagic

./: .gitignore  Cargo.toml  Readme.md  build.rs
editor/: Cargo.toml
editor/src/: main.rs
engine/: Cargo.toml  Readme.md
engine/examples/: 2d_mipmap_demo.rs  cube_mipmap_demo.rs  custom_shader_demo.rs  directional_light_demo.rs  gltf_demo.rs  hdr_demo.rs  hdr_skybox_demo.rs  ibl_demo.rs  ldr_skybox_demo.rs  multi_viewport_demo.rs  point_light_demo.rs  pointer_demo.rs  primitives_demo.rs  rt_demo.rs  spot_light_demo.rs  unlit_demo.rs
engine/examples/assets/models/: uv_sphere.glb
engine/examples/shaders/: circle.wgsl  custom_skybox.wgsl  show_mipmaps_2d.wgsl  show_uv.wgsl
engine/src/: lib.rs  types.rs
engine/src/assets/: asset.rs  mod.rs
engine/src/assets/environment/: ibldata.rs  mod.rs  skybox.rs
engine/src/assets/loaders/: gltf_loader.rs  mod.rs  model_loader.rs
engine/src/assets/materials/: material.rs  material_manager.rs  mod.rs
engine/src/assets/meshes/: mesh.rs  mesh_manager.rs  mod.rs  sub_mesh.rs  vertex_attribute.rs  vertex_format.rs  vertex_index.rs
engine/src/assets/meshes/primitives/: cuboid.rs  ico_sphere.rs  mod.rs  quad.rs  uv_sphere.rs
engine/src/assets/shaders/: mod.rs  module_parser.rs  shader.rs  shader_manager.rs  shader_property.rs
engine/src/assets/shaders/wgsl/: blit.wgsl  brdf_integration.wgsl  environmetn_prefilter.wgsl  equirect_to_cube.wgsl  pbr.wgsl  skybox.wgsl  unlit.wgsl
engine/src/assets/textures/: mipmap_generator.rs  mod.rs  sampler.rs  texture.rs  texture_sampler_manager.rs  texture_view.rs
engine/src/behaviors/: behavior.rs  behavior_wrapper.rs  camera_controller.rs  mod.rs
engine/src/components/: camera.rs  component.rs  component_arena.rs  component_storage.rs  light.rs  mesh_renderer.rs  mod.rs  sprite_renderer.rs  text_renderer.rs  transform.rs
engine/src/core/: arena.rs  engine.rs  engine_loop.rs  engine_utils.rs  layer.rs  mod.rs  node.rs  node_arena.rs  scene.rs  world.rs
engine/src/event/: event_dispatcher.rs  events.rs  mod.rs  mouse_events.rs
engine/src/graphics/: bind_group.rs  buffer.rs  buffer_view.rs  graphics_context.rs  mod.rs  render_api.rs  render_pipeline.rs  render_states.rs  texture_buffer_converter.rs  uniform.rs
engine/src/input/: input_manager.rs
engine/src/math/: color.rs  mod.rs  spherical_coordinate.rs  spherical_harmonics.rs
engine/src/renderer/: frame_data.rs  frame_renderer.rs  mod.rs  ui_renderer.rs
engine/src/time/: mod.rs
engine/src/utils/: hash_utils.rs  image_utils.rs  mod.rs  sh_tools.rs  skybox_builder.rs  sparse_set.rs
engine/src/utils/performance/: fps_counter.rs  mod.rs  performance_tracker.rs
engine/src/window/: mod.rs  window_input_processor.rs  window_size.rs
examples/: compute_shader.rs  cube.rs  ecs.rs  full_screen.rs  ibl.rs  mipmaps.rs  multi_camera.rs  pbr.rs  plane.rs  raytracer.rs  skybox.rs
examples/common/: camera_helper.rs  input_listener.rs  materials.rs  mod.rs
imagic_macros/: Cargo.toml
imagic_macros/src/: lib.rs
src/: asset.rs  asset_loader.rs  camera.rs  constants.rs  ecs.rs  graphics.rs  imagic_core.rs  input.rs  lib.rs  light.rs  material.rs  math.rs  model.rs  scene.rs  types.rs  ui.rs  utils.rs  window.rs
src/asset/: asset.rs  asset_manager.rs  loaders.rs
src/asset_loader/: hdr_loader.rs
src/camera/: camera.rs  camera_controller.rs  camera_manager.rs  layer.rs
src/ecs/: component.rs  entity.rs  query.rs  sparse_set.rs  system.rs  types.rs  world.rs
src/graphics/: bind_group.rs  bind_group_layout.rs  buffer.rs  compute.rs  equirect_to_cube_convert.rs  full_screen_renderer.rs  graphics_context.rs  ibl.rs  raytracer.rs  render_pipeline.rs  render_texture.rs  renderer.rs  surface_wrapper.rs  texture.rs  texture_manager.rs
src/imagic_core/: core.rs  imagic_app.rs  imagic_context.rs  render_item.rs
src/input/: input_manager.rs  mouse_input.rs
src/light/: light_manager.rs  point_light.rs  skybox.rs
src/material/: brdf_integral_material.rs  cube_prefilter_material.rs  environment_prefilter_material.rs  equirect_to_cube_material.rs  equirectangular_to_cube.rs  irradiance_map_gen_material.rs  material.rs  material_manager.rs  material_trait.rs  pbr.rs  pbr_material.rs  skybox.rs  skybox_material.rs  srgb_cube_to_linear_material.rs  unlit_material.rs
src/math/: color.rs  spherical.rs  vector.rs
src/model/: cube.rs  mesh.rs  plane.rs  sphere.rs  vertex_attribute.rs
src/scene/: scene_object.rs  (+2 more)
(+38 files in other folders)
