[package]
name = "imagic"
version = "0.1.0"
edition = "2021"
authors = ["lxycg <leixinyuethu@gmail.com>"]
description = "A thin rendering framework, implemented by Rust and WGPU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgdog/imagic"
keywords = ["rendering", "wgpu", "3D", "RenderingEngine", "GameEngine"]
categories = ["rendering", "rendering::engine","games", "graphics", "game-engines"]

exclude = [
    "examples/",
    "target/",
]

[dependencies]
log = { version = "0.4.25"}
env_logger = { version = "0.11.6" }
wgpu = "^23.0.0"
winit = { version = "^0.30.0", default-features = false, features = ["rwh_06"] }
glam = "0.29.2"
pollster = "0.4.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "hdr"]}
# egui
egui = { version = "0.30.0", default-features = false, features = ["default_fonts"] }
egui-wgpu = { version = "0.30.0",features = ["winit"] }
egui-winit = { version = "0.30.0"}
bytemuck = { version = "1.16.1", features = ["derive"] }

[profile.release]
strip = true