[workspace]
resolver = "3"
members = ["engine", "editor"]

[profile.dev]
debug = 2

[profile.release]
opt-level = 3 # “z” optimize volume, but slow speed(include runtime speed).
strip = true
lto = true         # 启用链接时优化
# 该配置将整个 crate 作为单个代码生成单元处理，允许编译器进行全局优化（如跨模块内联、冗余代码消除），可减少约 5-15% 的二进制体积
codegen-units = 1   # 体积优化优先（适合正式发布）
# 默认 release 模式使用 16 个并行单元（codegen-units = 16），设为 1 会禁用编译并行化，导致编译时间增加 20-50%
# codegen-units = 16  # 编译速度优先（适合开发调试）
panic = "abort"    # 禁用堆栈展开
debug = false      # 关闭调试符号
